# gamindie-ui/src/app/core/services/models.ts
@@ -3,6 +3,7 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 export type { Attachment } from './models/attachment';
+export type { AttachmentRequest } from './models/attachment-request';
 export type { AttachmentResponse } from './models/attachment-response';
 export type { AuthenticationRequest } from './models/authentication-request';
 export type { AuthenticationResponse } from './models/authentication-response';
