# gamindie-ui/src/app/core/services/models/attachment-request.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface AttachmentRequest {
+  metadata?: string;
+  name?: string;
+  type?: string;
+}
