# gamindie-ui/src/openapi/openapi.json
@@ -402,12 +402,12 @@
         }
       }
     },
-    "/attachments/": {
+    "/attachments/postman": {
       "post": {
         "tags": [
           "Attachment"
         ],
-        "operationId": "uploadAttachment",
+        "operationId": "uploadAttachmentPostman",
         "parameters": [
           {
             "name": "name",
@@ -431,6 +431,55 @@
             "required": false,
             "schema": {
               "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "required": [
+                  "sourceFile"
+                ],
+                "type": "object",
+                "properties": {
+                  "sourceFile": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/attachments/": {
+      "post": {
+        "tags": [
+          "Attachment"
+        ],
+        "operationId": "uploadAttachment",
+        "parameters": [
+          {
+            "name": "request",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/AttachmentRequest"
             }
           }
         ],
@@ -518,29 +567,6 @@
         }
       }
     },
-    "/users/feed": {
-      "get": {
-        "tags": [
-          "User"
-        ],
-        "operationId": "getFriendFeed",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Post"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/users/": {
       "get": {
         "tags": [
@@ -601,6 +627,48 @@
           "Post"
         ],
         "operationId": "findAllPostsByOwner",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 0
+            }
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 10
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/PageResponsePostResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/posts/feed": {
+      "get": {
+        "tags": [
+          "Post"
+        ],
+        "operationId": "getFriendFeed",
         "parameters": [
           {
             "name": "page",
@@ -1062,6 +1130,20 @@
           }
         }
       },
+      "AttachmentRequest": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "type": {
+            "type": "string"
+          },
+          "metadata": {
+            "type": "string"
+          }
+        }
+      },
       "UserResponse": {
         "type": "object",
         "properties": {
@@ -1069,7 +1151,13 @@
             "type": "integer",
             "format": "int32"
           },
+          "firstName": {
+            "type": "string"
+          },
           "fullName": {
+            "type": "string"
+          },
+          "lastName": {
             "type": "string"
           },
           "dateOfBirth": {
@@ -1146,6 +1234,24 @@
           },
           "message": {
             "$ref": "#/components/schemas/Message"
+          }
+        }
+      },
+      "AttachmentResponse": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "name": {
+            "type": "string"
+          },
+          "type": {
+            "type": "string"
+          },
+          "url": {
+            "type": "string"
           }
         }
       },
@@ -1425,6 +1531,60 @@
           }
         }
       },
+      "PostResponse": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "ownerId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "ownerFullName": {
+            "type": "string"
+          },
+          "ownerProfilePicture": {
+            "type": "string"
+          },
+          "attachments": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/AttachmentResponse"
+            }
+          },
+          "createdData": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "lastModifiedDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "tags": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "likes": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Likes"
+            }
+          },
+          "comments": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Comment"
+            }
+          },
+          "content": {
+            "type": "string"
+          }
+        }
+      },
       "Role": {
         "type": "object",
         "properties": {
@@ -1551,7 +1711,13 @@
           "name": {
             "type": "string"
           },
-          "profilePicture": {
+          "accountNonExpired": {
+            "type": "boolean"
+          },
+          "credentialsNonExpired": {
+            "type": "boolean"
+          },
+          "username": {
             "type": "string"
           },
           "authorities": {
@@ -1560,89 +1726,11 @@
               "$ref": "#/components/schemas/GrantedAuthority"
             }
           },
-          "username": {
+          "profilePicture": {
             "type": "string"
-          },
-          "credentialsNonExpired": {
-            "type": "boolean"
-          },
-          "accountNonExpired": {
-            "type": "boolean"
           },
           "accountNonLocked": {
             "type": "boolean"
-          }
-        }
-      },
-      "AttachmentResponse": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "name": {
-            "type": "string"
-          },
-          "type": {
-            "type": "string"
-          },
-          "url": {
-            "type": "string"
-          }
-        }
-      },
-      "PostResponse": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "ownerId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "ownerFullName": {
-            "type": "string"
-          },
-          "ownerProfilePicture": {
-            "type": "string"
-          },
-          "attachments": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/AttachmentResponse"
-            }
-          },
-          "createdData": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "lastModifiedDate": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "tags": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          },
-          "likes": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Likes"
-            }
-          },
-          "comments": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Comment"
-            }
-          },
-          "content": {
-            "type": "string"
           }
         }
       },
