# gamindie/src/main/java/com/ousaro/gamindie/attachment/AttachmentRequest.java
@@ -1,10 +1,7 @@
 package com.ousaro.gamindie.attachment;
 
 
-import org.springframework.web.multipart.MultipartFile;
-
 public record  AttachmentRequest (
-    MultipartFile sourceFile,
     String name,
     String type,
     String metadata
