# gamindie/src/main/java/com/ousaro/gamindie/post/PostController.java
@@ -5,10 +5,10 @@ import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.bind.annotation.RequestBody;
 
 import com.ousaro.gamindie.commun.PageResponse;
 
@@ -49,6 +49,15 @@ public class PostController {
         Authentication connectedUser
     ) {
         return ResponseEntity.ok(service.findAllPostsByOwner(page,size, connectedUser));
+    }
+
+    @GetMapping("feed")
+    public ResponseEntity<PageResponse<PostResponse>> getFriendFeed(
+        @RequestParam(name="page", defaultValue="0") int page,
+        @RequestParam(name="size", defaultValue="10") int size,
+        Authentication connectedUser
+    ) {
+        return ResponseEntity.ok(service.getFriendFeed(page, size, connectedUser));
     }
 
     
