# gamindie/src/main/java/com/ousaro/gamindie/user/UserController.java
@@ -9,8 +9,6 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import com.ousaro.gamindie.post.Post;
-
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 
@@ -22,11 +20,6 @@ public class UserController {
 
     private final UserService service;
 
-    @GetMapping("/feed")
-    public ResponseEntity<List<Post>> getFriendFeed(Authentication connectedUser) {
-        List<Post> friendPosts = service.getFriendPosts(connectedUser);
-        return ResponseEntity.ok(friendPosts);
-    }
 
     @GetMapping("/")
     public ResponseEntity<List<UserResponse>> getAllUsers() {
